<resources>
    <string name="default_email">dummy@example.com</string>
    <string name="default_password">Password123!</string>
    <string name="api_url">https://kalma.club</string>
    <string name="api_login">/api/user/login</string>
    <string name="api_signup">/api/user/signup</string>
    <string name="api_refresh">/api/user/refresh</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="calender">calender</string>
    <string name="settings">settings</string>

    <string name="app_name">Kalma</string>
    <string name="StartPageButtonText">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="emailMarker">Email</string>
    <string name="passwordMarker">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="login_image_desc">PLACEHOLDER IMAGE</string>
    <string name="error_message">There was an error logging in. Please check your email and password</string>
    <string name="lastname_marker">LastName</string>
    <string name="dateofbirth_marker">DateOfBirth</string>
    <string name="firstname_marker">FirstName</string>
    <string name="title_activity_home_">Home_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kalma">kalma</string>
    <string name="add_data">Add Data</string>
    <string name="height_logger">Height Logger</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="weight_logger">Weight Logger</string>
    <string name="mindful_minutes">Mindful Minutes</string>
    <string name="daily_step_count">Daily Step count\nCOMING SOON</string>
    <string name="homelayout">HomeLayout</string>
    <string name="user_id">User ID:</string>
    <string name="email_address">Email Address:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="placeholder">------/------</string>

    <string name="log_out">Log out</string>
    <string name="remember_me">Remember me?</string>
    <string name="_3_month">3 Month</string>
    <string name="all_time">All Time</string>
    <string name="_7_days">7 Days</string>
    <string name="_6_month">6 Month</string>
    <string name="start_date">Start Date</string>
    <string name="sleep_quality_rating">Sleep Quality Rating</string>
    <string name="stop_date">Stop Date</string>
    <string name="description">Description</string>
    <string name="progress_to_goal">Progress to goal:</string>
    <string name="view_from_date">View From Date</string>
    <string name="display_data_from">Display data from:</string>
    <string name="display_data_from">Display data from:</string>


</resources>
