<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SleepTracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainApp.SleepTrackerActivity">

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textLongMessage"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754"
        tools:targetApi="o"
        tools:visibility="visible" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="393dp"
        android:layout_height="214dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="413dp"
        android:layout_height="71dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnHome"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:textColor="@color/colorSecondary" />

        <Button
            android:id="@+id/btnProfile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:text="@string/profile" />

        <Button
            android:id="@+id/btnCalander"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:text="@string/calender" />

        <Button
            android:id="@+id/btnSettings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:text="@string/settings" />

    </TableRow>

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:text="@string/_3_month"
        android:textColor="#000000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:text="@string/all_time"
        android:textColor="#000000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:text="@string/_6_month"
        android:textColor="#000000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:text="@string/_7_days"
        android:textColor="#000000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:text="@string/add_data"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <TimePicker
        android:id="@+id/stopTimePicker"
        android:layout_width="163dp"
        android:layout_height="76dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="time"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <EditText
        android:id="@+id/txtStopdate"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/stop_date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtStartdate"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/start_date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        tools:targetApi="o" />

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="165dp"
        android:layout_height="76dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="time"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

</androidx.constraintlayout.widget.ConstraintLayout>