<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login.SignUpActivity">

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@color/colorSecondary"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:ems="10"
        android:hint="@string/lastname_marker"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtDOB"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:ems="10"
        android:hint="@string/dateofbirth_marker"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:ems="10"
        android:hint="@string/passwordMarker"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:ems="10"
        android:hint="@string/firstname_marker"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/colorBGLightShade"
        android:ems="10"
        android:hint="@string/emailMarker"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>